k8s-yamls/k8s-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: linxue/homework-docker:v1
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  #type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 30000
  selector:
    app: myapp
